--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
-.col {
-    max-height: 900px;
+
+[ class^="col"] {
+    max-height: 200px;
+    border: 1px solid black;
 }
 
+.img-fluid {
+    max-height: 100%;
+}
+
+body {
+    background-color: turquoise;
+}
